cilium_netpolicy_examples/cilium45/CiliumNetworkPolicy25.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "to-dev-from-nodes-in-cluster"
spec:
  endpointSelector:
    matchLabels:
      env: dev
  ingress:
    - fromEntities:
      - host
      - remote-node


#Access to/from all nodes in the cluster (or clustermesh)
#Allow all endpoints with the label env=dev to receive traffic from any host in the cluster that Cilium is running on.
